--- a/des.html
+++ b/des.html
@@ -307,7 +307,7 @@ function aplicarFiltros() {
     // Convertendo data do Firebase (ex: "15/07/2025") para "2025-07-15"
     const dataFormatada = dataVisita.includes("/")
       ? dataVisita.split("/").reverse().join("-")
-      : dataVisita;
+      : dataVisita.replaceAll("-", "/");
 
     return cliente.includes(clienteFiltro) &&
            (statusFiltro === "" || status === statusFiltro) &&
