--- a/des.html
+++ b/des.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Dashboard com Filtros</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <style>
     * { box-sizing: border-box; }
@@ -215,7 +217,7 @@
             <option value="Cancelado">Cancelado</option>
           </select>
           <input id="filtro-consultor" type="text" placeholder="Buscar consultor..." />
-          <input id="filtro-data" type="date" />
+          <input id="filtro-intervalo" type="text" placeholder="Filtrar por período..." />
         </div>
       <table>
         <thead>
@@ -294,7 +296,6 @@ function aplicarFiltros() {
   const clienteFiltro = document.getElementById("filtro-cliente").value.toLowerCase();
   const statusFiltro = document.getElementById("filtro-status").value;
   const consultorFiltro = document.getElementById("filtro-consultor").value.toLowerCase();
-  const dataSelecionada = document.getElementById("filtro-data").value; // yyyy-mm-dd
   const painel = document.getElementById("painel-detalhes");
   painel.innerHTML = "";
 
@@ -390,6 +391,18 @@ function aplicarFiltros() {
     document.getElementById("filtro-status").addEventListener("change", aplicarFiltros);
     document.getElementById("filtro-consultor").addEventListener("input", aplicarFiltros);
     document.getElementById("filtro-data").addEventListener("change", aplicarFiltros);
+                    let dataInicio = "";
+                let dataFim = "";
+                
+                flatpickr("#filtro-intervalo", {
+                  mode: "range",
+                  dateFormat: "Y-m-d",
+                  onChange: function(selectedDates) {
+                    dataInicio = selectedDates[0] ? selectedDates[0].toISOString().split("T")[0] : "";
+                    dataFim = selectedDates[1] ? selectedDates[1].toISOString().split("T")[0] : "";
+                    aplicarFiltros();
+                  }
+                });
   });
 </script>
 </body>
