--- a/des.html
+++ b/des.html
@@ -89,7 +89,7 @@
 
     .pink-card    { background: linear-gradient(238deg, #193b7c, #193b7c00); }
     .orange-card  { background: linear-gradient(238deg, #193b7c, #193b7c00); }
-    .blue-card    { background: linear-gradient(5deg, #00205b, #818181); }
+    .blue-card    { background: linear-gradient(238deg, #193b7c, #193b7c00); }
     .purple-card  { background: linear-gradient(358deg, #626262, #62626259); }
 
     .content {
