--- a/form-pecas.html
+++ b/form-pecas.html
@@ -172,6 +172,7 @@
       <label>Data da Visita *</label>
       <input type="date" name="dataVisita" id="dataVisita" required>
 
+      <label>Filial *</label>
       <select name="filial" required>
         <option value="">Selecione a filial</option>
         <option value="Campos Novos">Campos Novos</option>
