--- a/index.html
+++ b/index.html
@@ -31,11 +31,21 @@
 
     .notification-icon {
       position: absolute;
-      top: 95px;
-      right: -30px;
-      font-size: 24px;
+      top: 10px;
+      right: 10px;
+      font-size: 22px;
       cursor: pointer;
       color: white;
+      background-color: #00bbf9;
+      border-radius: 50%;
+      padding: 4px;
+    }
+
+    @media (max-width: 600px) {
+      .notification-icon {
+        top: 15px;
+        right: 15px;
+      }
     }
 
     .notification-icon:hover {
@@ -152,6 +162,7 @@
         width: 90%;
         max-width: 160px;
         padding: 20px 10px;
+        margin-left: -10px;
       }
 
       .container {
