--- a/form-pecas.html
+++ b/form-pecas.html
@@ -190,66 +190,66 @@
       <input type="tel" name="telefone" required>
 
       <label>Município *</label>
-      <input type="text" id="municipio" name="municipio" list="listaMunicipios" placeholder="Comece a digitar..." required>
-      <datalist id="listaMunicipios">
-        <option value="Abdon Batista">
-        <option value="Abelardo Luz">
-        <option value="Agrolândia">
-        <option value="Agronômica">
-        <option value="Água Doce">
-        <option value="Águas de Chapecó">
-        <option value="Águas Frias">
-        <option value="Águas Mornas">
-        <option value="Alfredo Wagner">
-        <option value="Alto Bela Vista">
-        <option value="Anchieta">
-        <option value="Angelina">
-        <option value="Anita Garibaldi">
-        <option value="Anitápolis">
-        <option value="Antônio Carlos">
-        <option value="Apiúna">
-        <option value="Arabutã">
-        <option value="Araquari">
-        <option value="Araranguá">
-        <option value="Armazém">
-        <option value="Arroio Trinta">
-        <option value="Arvoredo">
-        <option value="Ascurra">
-        <option value="Atalanta">
-        <option value="Aurora">
-        <option value="Balneário Arroio do Silva">
-        <option value="Balneário Barra do Sul">
-        <option value="Balneário Camboriú">
-        <option value="Balneário Gaivota">
-        <option value="Bandeirante">
-        <option value="Barra Bonita">
-        <option value="Barra Velha">
-        <option value="Bela Vista do Toldo">
-        <option value="Belmonte">
-        <option value="Benedito Novo">
-        <option value="Biguaçu">
-        <option value="Blumenau">
-        <option value="Bocaina do Sul">
-        <option value="Bom Jardim da Serra">
-        <option value="Bom Jesus">
-        <option value="Bom Jesus do Oeste">
-        <option value="Bom Retiro">
-        <option value="Bombinhas">
-        <option value="Botuverá">
-        <option value="Braço do Norte">
-        <option value="Braço do Trombudo">
-        <option value="Brunópolis">
-        <option value="Brusque">
-        <option value="Caçador">
-        <option value="Caibi">
-        <option value="Calmon">
-        <option value="Camboriú">
-        <option value="Campo Alegre">
-        <option value="Campo Belo do Sul">
-        <option value="Campo Erê">
-        <option value="Campos Novos">
-        <!-- (adicione mais se quiser) -->
-      </datalist>
+      <select name="municipio" required>
+        <option value="">Selecione o município</option>
+        <option value="Abdon Batista">Abdon Batista</option>
+        <option value="Abelardo Luz">Abelardo Luz</option>
+        <option value="Agrolândia">Agrolândia</option>
+        <option value="Agronômica">Agronômica</option>
+        <option value="Água Doce">Água Doce</option>
+        <option value="Águas de Chapecó">Águas de Chapecó</option>
+        <option value="Águas Frias">Águas Frias</option>
+        <option value="Águas Mornas">Águas Mornas</option>
+        <option value="Alfredo Wagner">Alfredo Wagner</option>
+        <option value="Alto Bela Vista">Alto Bela Vista</option>
+        <option value="Anchieta">Anchieta</option>
+        <option value="Angelina">Angelina</option>
+        <option value="Anita Garibaldi">Anita Garibaldi</option>
+        <option value="Anitápolis">Anitápolis</option>
+        <option value="Antônio Carlos">Antônio Carlos</option>
+        <option value="Apiúna">Apiúna</option>
+        <option value="Arabutã">Arabutã</option>
+        <option value="Araquari">Araquari</option>
+        <option value="Araranguá">Araranguá</option>
+        <option value="Armazém">Armazém</option>
+        <option value="Arroio Trinta">Arroio Trinta</option>
+        <option value="Arvoredo">Arvoredo</option>
+        <option value="Ascurra">Ascurra</option>
+        <option value="Atalanta">Atalanta</option>
+        <option value="Aurora">Aurora</option>
+        <option value="Balneário Arroio do Silva">Balneário Arroio do Silva</option>
+        <option value="Balneário Barra do Sul">Balneário Barra do Sul</option>
+        <option value="Balneário Camboriú">Balneário Camboriú</option>
+        <option value="Balneário Gaivota">Balneário Gaivota</option>
+        <option value="Bandeirante">Bandeirante</option>
+        <option value="Barra Bonita">Barra Bonita</option>
+        <option value="Barra Velha">Barra Velha</option>
+        <option value="Bela Vista do Toldo">Bela Vista do Toldo</option>
+        <option value="Belmonte">Belmonte</option>
+        <option value="Benedito Novo">Benedito Novo</option>
+        <option value="Biguaçu">Biguaçu</option>
+        <option value="Blumenau">Blumenau</option>
+        <option value="Bocaina do Sul">Bocaina do Sul</option>
+        <option value="Bom Jardim da Serra">Bom Jardim da Serra</option>
+        <option value="Bom Jesus">Bom Jesus</option>
+        <option value="Bom Jesus do Oeste">Bom Jesus do Oeste</option>
+        <option value="Bom Retiro">Bom Retiro</option>
+        <option value="Bombinhas">Bombinhas</option>
+        <option value="Botuverá">Botuverá</option>
+        <option value="Braço do Norte">Braço do Norte</option>
+        <option value="Braço do Trombudo">Braço do Trombudo</option>
+        <option value="Brunópolis">Brunópolis</option>
+        <option value="Brusque">Brusque</option>
+        <option value="Caçador">Caçador</option>
+        <option value="Caibi">Caibi</option>
+        <option value="Calmon">Calmon</option>
+        <option value="Camboriú">Camboriú</option>
+        <option value="Campo Alegre">Campo Alegre</option>
+        <option value="Campo Belo do Sul">Campo Belo do Sul</option>
+        <option value="Campo Erê">Campo Erê</option>
+        <option value="Campos Novos">Campos Novos</option>
+        <!-- Pode continuar com os outros municípios -->
+      </select>
 
       <label>Modelo da Máquina *</label>
       <input type="text" name="modeloMaquina" placeholder="" required>
